wip: nice rendering and animation. env.step() moves vehicles through time and space

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,7 +99,9 @@ venvPath = "."
 venv = ".venv"
 
 [tool.uv]
-dev-dependencies = []
+dev-dependencies = [
+    "pandas-stubs>=2.2.3.241009",
+]
 
 [tool.ruff]
 line-length = 100
